# diecastfun

./: .gitignore  README.md  next.config.js  package-lock.json  package.json
components/: carlist.tsx  footer.tsx  gridlist.tsx  layout.tsx  navbar.tsx  pagination.tsx
lib/middlewares/: authentication.ts  validation.ts
pages/: 404.tsx  _app.tsx  _document.tsx  brands.tsx  cars.tsx  categories.tsx  eras.tsx  index.tsx  makers.tsx  wanted.tsx
pages/api/: cars.ts
pages/api/admin/: authenticate.ts  brands.ts  cars.ts  wanted.ts
pages/api/admin/wanted/: [id].ts
pages/api/cars/[id]/: similar.ts
pages/cars/: [id].tsx
prisma/: schema.prisma
prisma/migrations/20221227175611_initial_migration/: migration.sql
prisma/migrations/20221227182254_add_fulltext/: migration.sql
prisma/migrations/20221227182618_add_fulltext_to_color/: migration.sql
prisma/migrations/20221228023000_add_unique_ids_to_tags/: migration.sql
prisma/migrations/20221228142527_add_full_text_index_for_similarity/: migration.sql
prisma/migrations/20221228144716_cleanup_indexes/: migration.sql
prisma/migrations/20240310143252_cleanup_old_app/: migration.sql
prisma/migrations/20241103225128_add_year_to_cars/: migration.sql
scripts/ai_agent/: README.md  ai_agent.py  pyproject.toml
scripts/rag_sandbox/: create_embeddings.ts  test_embeddings.ts  test_llama_index.ts
styles/: globals.css
utils/: api.ts  theme.ts  types.ts  typography.ts
utils/images/: loader.ts
